# smart-development-telegram-mcp-bot

./: .env.example  README.md
.cursor/rules/: rust-dev-rules.mdc
ai-model-example-bot/: Cargo.toml
ai-model-example-bot/src/: main.rs
example-mcp-bot/: Cargo.toml  mcp.json
example-mcp-bot/src/: main.rs
simple-example-bot/: Cargo.toml
simple-example-bot/src/: main.rs
telegram-command-mcp-bot/: Cargo.toml
telegram-command-mcp-bot/src/: main.rs
telegram-mcp-bot/: Cargo.toml  mcp.json
telegram-prompt-mcp-bot/: Cargo.toml
telegram-prompt-mcp-bot/src/: main.rs
