[package]
name = "telegram-mcp-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "socks"] }
pretty_env_logger = "0.5"
indexmap = { version = "2.0", features = ["serde"] }
