[package]
name = "telegram-prompt-mcp-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "socks"] }
async-openai = "0.19.1"
thiserror = "1.0"
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
regex = "1.10.4"
